@@ -1,4 +1,5 @@
 < INT >< IDENTIFIER >< ; > < NEWLINE >
 < INT >< IDENTIFIER >< ; > < NEWLINE >
 < INT >< IDENTIFIER >< ; > < NEWLINE >
-< INT >< IDENTIFIER >< = > < CHARACTER_CONSTANT >< ; > 
+< INT >< IDENTIFIER >< = > < CHARACTER_CONSTANT >< ; > < NEWLINE >
+< INT >< IDENTIFIER >< NEWLINE >
